<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="wrap_content">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_alignParentRight="true"
            android:id="@+id/delitem"
            android:text="Delete"
            android:drawableLeft="@drawable/deletebay"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
        </TextView>




        <TableLayout
            android:layout_below="@+id/delitem"
        android:id="@+id/tbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black">






        <TableRow
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        >


        <TextView
            android:id="@+id/fb1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="10sp"
            android:text="@string/col0"
            android:textAlignment="center"
            android:textColor="#1430CA"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/fb2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="10sp"
            android:text="@string/col1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/fb3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="10sp"
            android:text="@string/col2"
            android:textAlignment="center"
            android:textColor="#F44336"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/fb4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="10sp"
            android:text="@string/col3"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp" />




        <TextView
            android:id="@+id/fb5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="10sp"
            android:text="@string/col4"
            android:textAlignment="center"
            android:textColor="#F44336"
            android:textSize="12sp" />
    </TableRow>
    </TableLayout>
    </RelativeLayout>
</LinearLayout>