<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="MissingPrefix"
    android:layout_height="wrap_content" >


    <androidx.cardview.widget.CardView
        android:id="@+id/cardss"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="49dp">

        <TableRow
            android:layout_below="@+id/sr"
            android:id="@+id/table23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/dp1"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10sp"
                android:text="@string/hd1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/dp2"
                android:layout_width="54dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="10sp"
                android:text="@string/hd2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/dp3"
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:padding="10sp"
                android:text="@string/hd3"
                android:textAlignment="center"
                android:textColor="#3F51B5"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/dp4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="10sp"
                android:text="@string/hd4"
                android:textAlignment="center"
                android:textColor="#B61515"
                android:textSize="15sp" />

        </TableRow>


    </androidx.cardview.widget.CardView>
</RelativeLayout>