<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="MissingPrefix"
    android:layout_height="wrap_content" >

    <androidx.cardview.widget.CardView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:textColor="#3F51B5"
            android:id="@+id/sam1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="10sp"
            android:text="@string/ro1"
            android:textAlignment="center"
            android:textSize="12sp" />



        <TextView
            android:id="@+id/sam2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="10sp"
            android:text="@string/ro2"
            android:textAlignment="center"
            android:textSize="12sp" />


        <TextView
            android:textColor="#E11830"
            android:id="@+id/sam3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="10sp"
            android:text="@string/ro3"
            android:textAlignment="center"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/sam4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="10sp"
            android:text="@string/ro4"
            android:textAlignment="center"
            android:textSize="12sp" />


        <TextView
            android:padding="10sp"
            android:text="sa"
            android:id="@+id/sampot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="12sp" />

        <ImageView

            android:id="@+id/removes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/sinkicon"
            ></ImageView>

    </TableRow>

</androidx.cardview.widget.CardView>

</RelativeLayout>