<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="MissingPrefix"
    android:layout_height="wrap_content">


        <TableRow

            android:id="@+id/table2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:textColor="#3F51B5"
                android:id="@+id/it1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="10sp"
                android:text="@string/hd1"
                android:textAlignment="center"

                android:textSize="12sp" />


            <TextView
                android:id="@+id/it2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/hd2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/it3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ellipsize="end"
                android:padding="10sp"
                android:text="@string/hd3"
                android:textAlignment="center"
                android:textColor="#F44336"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/it4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="10sp"
                android:text="QTY."
                android:textAlignment="center"
                android:textColor="#171717"
                android:textSize="12sp" />



            <TextView
                android:id="@+id/it5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="10sp"
                android:text="@string/hd5"
                android:textAlignment="center"
                android:textColor="#0E0E0E"
                android:textSize="10sp">

            </TextView>

            <Button
                android:id="@+id/it6"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="👍"
                android:layout_marginTop="5dp"
                android:background="@drawable/circle_button"/>

        </TableRow>


</RelativeLayout>