<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cards"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="49dp">

        <TableRow
            android:layout_below="@+id/sr"
            android:id="@+id/table2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/l1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/ss1"
                android:textAlignment="center"
                android:textColor="@color/purple_700"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/l2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:padding="10sp"
                android:text="@string/ss2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/l3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="3"
                android:padding="10sp"
                android:text="@string/ss3"
                android:textAlignment="center"
                android:textColor="#F44336">

            </TextView>


        </TableRow>

    </androidx.cardview.widget.CardView>




</RelativeLayout>

